Fixed horizontal scrolling.

--- a/Minesweeper/styles.css
+++ b/Minesweeper/styles.css
@@ -7,20 +7,27 @@
     padding: 0;
     user-select: none;
 }
-.wrapper {
+body {
     background: #000;
+}
+.wrapper {
     padding: 10px;
+    max-width: 100%;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    overflow: hidden;
 }
 .scroller {
-    padding: 0 20px;
+    margin: 10px;
+    max-width: 100%;
+    padding: 20px;
     overflow: auto;
 }
 .content {
+    width: fit-content;
     margin: 20px auto;
     padding: 10px;
     display: flex;
@@ -103,6 +110,7 @@
 }
 .cell {
     margin: 1px;
+    flex: 0 0 25px;
     width: 25px;
     height: 25px;
     background-color: #909090;
